Get slack user info from db
