# server/src/api_service/index.js
@@ -1,5 +1,6 @@
 import { ReportConfiguration } from '../model/report-configuration.js'
 import { SlackbotApiToken } from '../model/api-token.js'
+import { UserInfo } from '../model/user-info.js'
 import { registerScheduler, unregisterScheduler } from '../scheduler-adapter.js'
 import logger from '../../common/logger.js'
 import mongoose from 'mongoose'
@@ -135,6 +136,27 @@ function registerApiRouters(router, client) {
       logger.debug(`the message "${ctx.request.body.text}" will be sent to channel ${ctx.params.channelId}`)
       const request = {
          channel: ctx.params.channelId,
+         text: ctx.request.body.text
+      }
+      const result = await client.chat.postMessage(request)
+      logger.debug(`post message result for ${ctx.state.userId} is: ${JSON.stringify(result)}`)
+      ctx.response.body = result
+   })
+
+   router.post('/api/v1/user/:userName/messages', async (ctx, next) => {
+      ctx.assert(ctx.request.body.text != null && ctx.request.body.text !== '', 400,
+         'The message is not given, can not post the empty message.', { result: false })
+      ctx.assert(ctx.params.userName != null && ctx.params.userName !== '',
+         400, 'User name is not given when posting message.', { result: false })
+      logger.debug(`the message "${ctx.request.body.text}" will be sent to user ${ctx.params.userName}`)
+      const userInfo = await UserInfo.findOne({ userName: ctx.params.userName })
+      if (userInfo == null || userInfo.slackId == null || userInfo.slackId === '') {
+         ctx.response.status = 400
+         ctx.response.body = { result: false, message: `${ctx.params.userName} not found` }
+         return
+      }
+      const request = {
+         userId: userInfo.slackId,
          text: ctx.request.body.text
       }
       const result = await client.chat.postMessage(request)
